# EECE5554

./: .gitignore  README.md
Final_Project/: PROJECT_README.md  README.md
GROUP_7_SPOT_DATA-20260129T222441Z-3-001/: README.md
Individual_Project/: AR_Individual.pptx
LAB1/: Readme.md
LAB1/src/Analysis_scripts/: stationary_data_analysis.py  walking_data_analysis.py
LAB1/src/data/: stationary_gps_data.csv  stationary_gps_data.txt  walking1_gps_data.csv  walking1_gps_data.txt  walking_gps_data.csv  walking_gps_data.txt
LAB1/src/data/stationary_data/: metadata.yaml  stationary_data_0.db3
LAB1/src/data/walking1_data/: metadata.yaml  walking1_data_0.db3
LAB1/src/data/walking_data/: metadata.yaml  walking_data_0.db3
LAB1/src/gps_driver/: package.xml  setup.py
LAB1/src/gps_driver/gps_driver/: driver.py  utm_service.py
LAB1/src/gps_driver/launch/: gps_launch.py
LAB1/src/gps_interfaces/: CMakeLists.txt  package.xml
LAB3/: Readme.md
LAB3/analysis/15mins_data/: comprehensive_imu_15min_analysis.py  imu_15min_statistics.csv
LAB3/analysis/5hrs_data/: alendeviation2.m
LAB3/data/: metadata.yaml
LAB3/src/imu_driver/: package.xml  setup.py
LAB3/src/imu_msgs/: CMakeLists.txt  package.xml
LAB3/src/imu_msgs/msg/: IMUmsg.msg
LAB4/: Readme.md
LAB4/analysis/: deadrocking.m  fwd_vel_est.m  magnetometer_calibration.m  sensor_fusion.m
PA0/: PA0
PA1/src/publisher_subscriber_pkg/: package.xml  setup.cfg  setup.py
PA1/src/py_srvcli/: package.xml  setup.py
src/publisher_subscriber_pkg/publisher_subscriber_pkg/: publisher.py  server.py
(+9 files in other folders)
